first complete version

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta property="og:url"                content="https://www.blivande.com/" />
     <meta property="og:type"               content="website" />
     <meta property="og:title"              content="Blivande" />
-    <meta property="og:description"        content="House Blivande is a community for co-working, work, creativity and participatory culture in Stockholm. Our members have access to offices, meeting rooms, workshops, a library, communal spaces, a wood workshop, sewing machines, an electronics labs, micromanufacturing, a metal workshop and a community to call their own." />
+    <meta property="og:description"        content="House Blivande is a community for work, creativity and participatory culture in Stockholm. Our members have access to offices, meeting rooms, workshops, a library, communal spaces, a wood workshop, sewing machines, an electronics labs, micromanufacturing, a metal workshop and a community to call their own." />
     <meta property="og:image"              content="https://forum.blivande.com/uploads/blivande/original/1X/ce80eedb75991fa72b48a15ceb9ca803d15bc64b.jpeg" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Blivande</title>
